got it loading an image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@ body {
 </head>
 <body>
 
+<img id="totoro" src="totoro.jpg" style="display: none" />
+
 <canvas id="c" width="600" height="600"></canvas>
 
 
