Added numeric. Dragging to change matrix starting to work.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ body {
 <script src="vendor/underscore-min.js"></script>
 <script src="vendor/jquery-1.8.3.min.js"></script>
 <script src="vendor/keymaster.min.js"></script>
+<script src="vendor/numeric-1.0.2.min.js"></script>
+
 
 <script src="compiled/app.js"></script>
 
