--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>Refractor</title>
 <style>
 body {
@@ -28,13 +29,15 @@ body {
 </head>
 <body>
 
-<img id="totoro" src="totoro.jpg" style="display: none" />
+<img id="totoro" src="totoro.jpg" />
 
 <div id="canvas-div">
   <canvas id="c"></canvas>
 </div>
 
 <div class="touch-hint"></div>
+
+<div id="debug" style="position: absolute; top: 40px; left: 40px; color: #f00"></div>
 
 <script src="vendor/underscore-min.js"></script>
 <script src="vendor/jquery-1.8.3.min.js"></script>
