--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,7 @@ body {
 
 <div class="touch-hint"></div>
 
-<div id="debug" style="position: absolute; top: 40px; left: 40px; color: #f00"></div>
+<div id="debug" style="display: none; position: absolute; top: 40px; left: 40px; color: #f00"></div>
 
 <script src="vendor/underscore-min.js"></script>
 <script src="vendor/jquery-1.8.3.min.js"></script>
