--- a/web/index.html
+++ b/web/index.html
@@ -37,12 +37,13 @@ body {
 
 <div class="touch-hint"></div>
 
-<div id="debug" style="display: none; position: absolute; top: 40px; left: 40px; color: #f00"></div>
+<div id="debug" style="position: absolute; top: 40px; left: 40px; color: #f00"></div>
 
 <script src="vendor/underscore-min.js"></script>
 <script src="vendor/jquery-1.8.3.min.js"></script>
 <script src="vendor/keymaster.min.js"></script>
 <script src="vendor/numeric-1.0.2.min.js"></script>
+<script src="vendor/hammer.min.js"></script>
 
 
 <script src="compiled/app.js"></script>
