--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
 <style>
 body {
   background-color: #eee;
+  font-family: Lucida Grande;
 }
 #canvas-div {
   position: absolute;
@@ -21,7 +22,16 @@ body {
   top: 0px;
   bottom: 0px;
   background-color: #333;
-  color: #999;
+  color: #ccc;
+}
+
+.distortion {
+  padding: 12px;
+  border-bottom: 1px solid #555;
+}
+.distortion.selected {
+  background-color: #555;
+  color: #fc0;
 }
 </style>
 </head>
@@ -33,17 +43,25 @@ body {
   <canvas id="c"></canvas>
 </div>
 
-<div id="sidebar">
-  <button id="add">+</button>
+<div id="sidebar" data-bind="with: koState">
+  <div data-bind="foreach: chain">
+    <div class="distortion" data-bind="css: {selected: $data === $parent.selected}">
+      <button class="button-remove">X</button>
+      <span data-bind="text: distortion.title"></span>
+
+    </div>
+  </div>
+  <button class="button-add">+</button>
 </div>
 
-<div id="debug" style="position: absolute; top: 40px; left: 40px; color: #f00"></div>
+<div id="debug" style="display: none; position: absolute; top: 40px; left: 40px; color: #f00"></div>
 
 <script src="vendor/underscore-min.js"></script>
 <script src="vendor/jquery-1.8.3.min.js"></script>
 <script src="vendor/keymaster.min.js"></script>
 <script src="vendor/numeric-1.0.2.min.js"></script>
 <script src="vendor/hammer.min.js"></script>
+<script src="vendor/knockout-2.2.1.js"></script>
 
 
 <script src="compiled/app.js"></script>
