Switched to hammer jquery

--- a/web/index.html
+++ b/web/index.html
@@ -60,7 +60,7 @@ body {
 <script src="vendor/jquery-1.8.3.min.js"></script>
 <script src="vendor/keymaster.min.js"></script>
 <script src="vendor/numeric-1.0.2.min.js"></script>
-<script src="vendor/hammer.min.js"></script>
+<script src="vendor/jquery.hammer.min.js"></script>
 <script src="vendor/knockout-2.2.1.js"></script>
 
 
