--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,7 @@ body {
 }
 button {
   font-size: 18px;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
 }
 .typicn {
   vertical-align: middle;
@@ -31,7 +32,6 @@ button {
   top: 0px;
   bottom: 0px;
   background-color: #222;
-  color: #ccc;
 
   overflow: hidden;
   overflow-y: scroll;
@@ -40,19 +40,32 @@ button {
 
 
 .row {
-  padding: 12px;
+  padding: 6px;
 }
 .section {
   margin: 36px 0px;
 }
+.chain {
+  margin: 36px 12px;
+}
 .distortion {
   background-color: #333;
-  border-bottom: 1px solid #555;
-
+  color: #777;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5);
+  margin-top: 1px;
+  text-shadow: 0px 2px 2px rgba(0,0,0,0.5);
+}
+.distortion:first-child {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+.distortion:last-child {
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 .distortion.selected {
-  background-color: #555;
-  color: #fc0;
+  background-color: rgb(79, 89, 145);
+  color: #eee;
 }
 </style>
 </head>
@@ -66,11 +79,11 @@ button {
 
   <div class="section" style="text-align: center">
     <button class="button-image-prev"><span class="typicn previous"></span></button>
-    <img data-bind="attr: {src: 'images/' + image + '.jpg'}" height="96" style="vertical-align: middle" />
+    <img data-bind="attr: {src: 'images/' + image + '.jpg'}" width="96" height="96" style="vertical-align: middle;" />
     <button class="button-image-next"><span class="typicn next"></span></button>
   </div>
 
-  <div class="section" data-bind="foreach: chain">
+  <div class="section chain" data-bind="foreach: chain">
     <div class="distortion row" data-bind="css: {selected: $data === $parent.selected}">
       <button class="button-remove"><span class="typicn times"></span></button>
       <span data-bind="text: distortion.title"></span>
