Added overflow: hidden to body

--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@ body {
   background-color: #eee;
   font-family: Lucida Grande;
   font-size: 18px;
+  overflow: hidden;
 }
 button {
   font-size: 18px;
