--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,13 @@ button {
   right: 256px;
   bottom: 0px;
 }
+#c {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+}
 #sidebar {
   position: absolute;
   right: 0px;
