--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ a {
 
 <h1>Refractor</h1>
 
+<iframe src="http://player.vimeo.com/video/60983552?title=0&amp;byline=0&amp;portrait=0" width="640" height="480" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 
 <p>Refractor is a multitouch interface for transforming and distorting images.</p>
 
