fork me on github

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ a {
 <p>Pixel Shaders is supported by an <a href="http://eyebeam.org/projects/openart">Open(Art) Fellowship</a> from <a href="http://eyebeam.org/">Eyebeam</a> and <a href="http://www.mozilla.org/foundation/">Mozilla</a>.</p>
 
 
+<a href="https://github.com/electronicwhisper/arthackday-refractor"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 
 </body>
 </html>
