Added "Polar Mode". Changed slightly how solve works. Added keyboard controls for nudging scale and rotate (for single-touch browser).

--- a/web/index.html
+++ b/web/index.html
@@ -104,9 +104,14 @@ button {
     </div>
   </div>
 
+  <div class="section row" style="color: #ccc">
+    <input type="checkbox" data-bind="checked: polarMode" /> Polar Mode
+  </div>
+
   <div class="section row">
     <button class="button-reset"><span class="typicn refresh"></span> Reset</button>
   </div>
+
 </div>
 
 <div id="debug" style="display: none; position: absolute; top: 40px; left: 40px; color: #f00"></div>
